[metadata]
name = aioadb
author = tba
author-email = thiago.brito700@gmail.com
summary = A minimal async adb implementation
license = MIT
# description-file = ABOUT.rst
home-page = https://github.com/tba91/aioadb
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[bdist_wheel]
universal = 1
